src/main/java/compiler/Parser/grammer.txt
Program = Statement*

Statement =   VarDeclaration ";"
            | Assignment ";"
            | IfStmt
            | WhileStmt
            | ForStmt
            | ReturnStmt ";"
            | FunctionDecl
            | CollectionDecl
            | Expr ";"

VarDeclaration = ["final"] Type Identifier ["=" Expr]

Assignment = Identifier ("=" | "+=" | "-=" | "*=" | "/=" | "%=") Expr

IfStmt = "if" "(" Expr ")" "{" Statement* "}" ["else" "{" Statement* "}"]

WhileStmt = "while" "(" Expr ")" "{" Statement* "}"

ForStmt = "for" "(" Identifier ";" Expr "->" Expr ";" Expr ")" "{" Statement* "}"

ReturnStmt = "return" [Expr]

FunctionDecl = "def" Identifier "(" [ParamList] ")" "{" Statement* "}"
             | "def" Type Identifier "(" [ParamList] ")" "{" Statement* "}"

ParamList = Param ("," Param)*

Param = Type Identifier

CollectionDecl = "coll" Identifier "{" (VarDeclaration ";")* "}"

Expression = Expr ("+" | "-" | "*" | "/" | "%" | "==" | "=/=" | "&&" | "||" | "<" | ">" | "<=" | ">=") Expr
           | "-" Expr
           | "not" Expr
           | "(" Expr ")"
           | Literal
           | Identifier
           | Identifier "(" [ArgList] ")"
           | Expr "[" Expr "]"
           | Expr "." Identifier
           | Type "ARRAY" "[" Expr "]"
           | NewExpr
           | LambdaExpr

LambdaExpr = "(" [ParamList] ")" "->" (Expr | "{" Statement* "}")

ArgList = Expr ("," Expr)*

NewExpr = "new" Identifier "(" ")"

Literal = Integer | Float | Boolean | String

Integer       = [0-9]+
Float         = [0-9]* "." [0-9]+
Boolean       = "true" | "false"
String        = "\"" .* "\""

Identifier    = [a-z_][a-zA-Z0-9_]*

Type = "INT" | "FLOAT" | "STRING" | "BOOLEAN" | "BOOL" | Identifier | Type "[]" | FunctionType

FunctionType = "(" [TypeList] ")" "->" Type
TypeList = Type ("," Type)*
