src/main/java/compiler/Parser/Parser.java
package compiler.Parser;

import compiler.Lexer.Lexer;
import compiler.Lexer.Symbol;

import java.util.ArrayList;
import java.util.List;

public class Parser {
    private final Lexer lexer;
    private Symbol current;
    private Symbol next;

    public Parser(Lexer lexer) {
        this.lexer = lexer;
        this.current = lexer.getNextSymbol();
        this.next = lexer.getNextSymbol();
    }

    private void advance() {
        current = next;
        next = lexer.getNextSymbol();
    }

    private boolean check(Symbol.TokenType type) {
        return current != null && current.getType() == type;
    }

    private boolean checkNext(Symbol.TokenType type) {
        return next != null && next.getType() == type;
    }

    private boolean match(Symbol.TokenType type) {
        if (check(type)) {
            advance();
            return true;
        }
        return false;
    }

    private void expect(Symbol.TokenType type, String message) {
        if (!match(type)) {
            throw new ParseException(message + " | found: " + current);
        }
    }

    private boolean isEOF() {
        return current != null && current.getType() == Symbol.TokenType.EOF;
    }

    private String lexemeOf(Symbol s) {
        return s == null ? null : s.getLexeme();
    }

    private boolean hasLexeme(Symbol s, String lexeme) {
        return s != null && lexeme != null && lexeme.equals(lexemeOf(s));
    }

    private boolean isKeyword(Symbol s, Symbol.TokenType tokenType, String lexeme) {
        if (s == null) return false;

        if (tokenType == Symbol.TokenType.IDENTIFIER) {
            return hasLexeme(s, lexeme);
        }

        return s.getType() == tokenType || hasLexeme(s, lexeme);
    }
    
    private boolean matchKeyword(Symbol.TokenType tokenType, String lexeme) {
        if (isKeyword(current, tokenType, lexeme)) {
            advance();
            return true;
        }
        return false;
    }

    private void expectKeyword(Symbol.TokenType tokenType, String lexeme, String message) {
        if (!matchKeyword(tokenType, lexeme)) {
            throw new ParseException(message + " | found: " + current);
        }
    }

    private boolean isTypeToken(Symbol s) {
        if (s == null) return false;

        String lex = lexemeOf(s);
        if ("INT".equals(lex) || "FLOAT".equals(lex) || "STRING".equals(lex) || "BOOLEAN".equals(lex) || "BOOL".equals(lex)) {
            return true;
        }

        return s.getType() == Symbol.TokenType.IDENTIFIER
                && lex != null
                && !lex.isEmpty()
                && Character.isUpperCase(lex.charAt(0));
    }

    private boolean isLiteral(Symbol s) {
        if (s == null) return false;

        Symbol.TokenType t = s.getType();
        if ((t == Symbol.TokenType.INT
                || t == Symbol.TokenType.FLOAT
                || t == Symbol.TokenType.STRING
                || t == Symbol.TokenType.BOOL) && !isTypeToken(s)) {
            return true;
        }

        String lex = lexemeOf(s);
        return "true".equals(lex) || "false".equals(lex);
    }

    private boolean startsVarDeclaration() {
        return isTypeToken(current);
    }

    private boolean startsAssignment() {
        return check(Symbol.TokenType.IDENTIFIER) && checkNext(Symbol.TokenType.ASSIGN);
    }

    private boolean startsExpression() {
        return check(Symbol.TokenType.LPAREN)
                || check(Symbol.TokenType.IDENTIFIER)
                || isTypeToken(current)
                || isLiteral(current)
                || check(Symbol.TokenType.MINUS)
                || isKeyword(current, Symbol.TokenType.KW_NOT, "not");
    }

    private String consumeOperator() {
        String op = lexemeOf(current);
        if (op == null) op = current.getType().name();
        advance();
        return op;
    }

    public AST getAST() {
        ProgramNode program = parseProgram();
        return new AST(program);
    }

    private ProgramNode parseProgram() {
        List<StatementNode> statements = new ArrayList<>();

        while (!isEOF()) {
            if (isKeyword(current, Symbol.TokenType.IDENTIFIER, "coll")) {
                statements.add(parseCollectionDeclaration());
            } else if (isKeyword(current, Symbol.TokenType.KW_DEF, "def")) {
                statements.add(parseFunctionDeclaration());
            } else {
                statements.add(parseStatement());
            }
        }

        expect(Symbol.TokenType.EOF, "Expected end of file");
        return new ProgramNode(statements);
    }

    private StatementNode parseStatement() {
        if (isKeyword(current, Symbol.TokenType.KW_FOR, "for")) {
            return parseForStatement();
        }

        if (isKeyword(current, Symbol.TokenType.KW_FOR, "for")) {
            return parseForStatement();
        }

        if (isKeyword(current, Symbol.TokenType.KW_IF, "if")) {
            return parseIfStatement();
        }

        if (isKeyword(current, Symbol.TokenType.KW_WHILE, "while")) {
            return parseWhileStatement();
        }

        if (isKeyword(current, Symbol.TokenType.KW_RETURN, "return")) {
            StatementNode stmt = parseReturnStatement();
            expect(Symbol.TokenType.SEMICOLON, "Expected ';' after return statement");
            return stmt;
        }

        if (startsVarDeclaration()) {
            StatementNode stmt = parseVarDeclaration();
            expect(Symbol.TokenType.SEMICOLON, "Expected ';' after variable declaration");
            return stmt;
        }

        if (startsAssignment()) {
            StatementNode stmt = parseAssignment();
            expect(Symbol.TokenType.SEMICOLON, "Expected ';' after assignment");
            return stmt;
        }

        if (startsExpression()) {
            ExpressionNode expr = parseExpression();
            expect(Symbol.TokenType.SEMICOLON, "Expected ';' after expression");
            return new ExpressionStatementNode(expr);
        }

        throw new ParseException("Invalid statement start: " + current);
    }

    private CollectionNode parseCollectionDeclaration() {
        expectKeyword(Symbol.TokenType.IDENTIFIER, "coll", "Expected 'coll'");

        String name = lexemeOf(current);
        expect(Symbol.TokenType.IDENTIFIER, "Expected collection name");

        expect(Symbol.TokenType.LBRACE, "Expected '{' after collection name");

        List<VarDeclarationNode> fields = new ArrayList<>();
        while (!check(Symbol.TokenType.RBRACE) && !isEOF()) {
            fields.add(parseVarDeclaration());
            expect(Symbol.TokenType.SEMICOLON, "Expected ';' after collection field");
        }

        expect(Symbol.TokenType.RBRACE, "Expected '}' after collection body");
        return new CollectionNode(name, fields);
    }

    private FunctionNode parseFunctionDeclaration() {
        expectKeyword(Symbol.TokenType.KW_DEF, "def", "Expected 'def'");

        String returnType = "void";
        if (isTypeToken(current)) {
            returnType = parseType();
        }

        String name = lexemeOf(current);
        expect(Symbol.TokenType.IDENTIFIER, "Expected function name");

        expect(Symbol.TokenType.LPAREN, "Expected '(' after function name");
        List<VarDeclarationNode> parameters = parseParameters();
        expect(Symbol.TokenType.RPAREN, "Expected ')' after parameters");

        List<StatementNode> body = parseBlockStatements();
        return new FunctionNode(name, returnType, parameters, body);
    }

    private List<VarDeclarationNode> parseParameters() {
        List<VarDeclarationNode> parameters = new ArrayList<>();

        if (check(Symbol.TokenType.RPAREN)) {
            return parameters;
        }

        while (true) {
            String type = parseType();
            String identifier = lexemeOf(current);
            expect(Symbol.TokenType.IDENTIFIER, "Expected parameter name");
            parameters.add(new VarDeclarationNode(false, type, identifier, null));

            if (!match(Symbol.TokenType.COMMA)) {
                break;
            }
        }

        return parameters;
    }

    private VarDeclarationNode parseVarDeclaration() {
        boolean isFinal = matchKeyword(Symbol.TokenType.KW_FINAL, "final");
        String type = parseType();

        String identifier = lexemeOf(current);
        expect(Symbol.TokenType.IDENTIFIER, "Expected identifier in variable declaration");

        ExpressionNode value = null;
        if (match(Symbol.TokenType.ASSIGN)) {
            value = parseExpression();
        }

        return new VarDeclarationNode(isFinal, type, identifier, value);
    }

    private String parseType() {
        if (!isTypeToken(current)) {
            throw new ParseException("Expected type keyword | found: " + current);
        }

        String type = lexemeOf(current);
        advance();

        if (match(Symbol.TokenType.LBRACKET)) {
            expect(Symbol.TokenType.RBRACKET, "Expected ']' after '[' in array type");
            type = type + "[]";
        }

        return type;
    }

    private AssignmentNode parseAssignment() {
        String identifier = lexemeOf(current);
        expect(Symbol.TokenType.IDENTIFIER, "Expected identifier on left side of assignment");
        expect(Symbol.TokenType.ASSIGN, "Expected '=' in assignment");
        ExpressionNode value = parseExpression();
        return new AssignmentNode(identifier, value);
    }

    private IfNode parseIfStatement() {
        expectKeyword(Symbol.TokenType.KW_IF, "if", "Expected 'if'");
        expect(Symbol.TokenType.LPAREN, "Expected '(' after if");
        ExpressionNode condition = parseExpression();
        expect(Symbol.TokenType.RPAREN, "Expected ')' after if condition");

        List<StatementNode> thenBranch = parseBlockStatements();
        List<StatementNode> elseBranch = null;

        if (matchKeyword(Symbol.TokenType.KW_ELSE, "else")) {
            elseBranch = parseBlockStatements();
        }

        return new IfNode(condition, thenBranch, elseBranch);
    }

    private WhileNode parseWhileStatement() {
        expectKeyword(Symbol.TokenType.KW_WHILE, "while", "Expected 'while'");
        expect(Symbol.TokenType.LPAREN, "Expected '(' after while");
        ExpressionNode condition = parseExpression();
        expect(Symbol.TokenType.RPAREN, "Expected ')' after while condition");

        List<StatementNode> body = parseBlockStatements();
        return new WhileNode(condition, body);
    }

    private ReturnNode parseReturnStatement() {
        expectKeyword(Symbol.TokenType.KW_RETURN, "return", "Expected 'return'");

        ExpressionNode value = null;
        if (!check(Symbol.TokenType.SEMICOLON)) {
            value = parseExpression();
        }

        return new ReturnNode(value);
    }

    private ForNode parseForStatement() {
        expectKeyword(Symbol.TokenType.KW_FOR, "for", "Expected 'for'");
        expect(Symbol.TokenType.LPAREN, "Expected '(' after for");

        String identifier = lexemeOf(current);
        expect(Symbol.TokenType.IDENTIFIER, "Expected loop variable name");
        expect(Symbol.TokenType.SEMICOLON, "Expected ';' after loop variable");

        ExpressionNode rangeStart = parsePrimary();

        if (!match(Symbol.TokenType.RARROW)) {
            expect(Symbol.TokenType.MINUS, "Expected '-' in for range");
            expect(Symbol.TokenType.GT, "Expected '>' after '-' in for range");
        }

        ExpressionNode rangeEnd = parseExpression();
        expect(Symbol.TokenType.SEMICOLON, "Expected ';' after for range");

        ExpressionNode update = parseExpression();
        expect(Symbol.TokenType.RPAREN, "Expected ')' after for header");

        List<StatementNode> body = parseBlockStatements();
        return new ForNode(identifier, rangeStart, rangeEnd, update, body);
    }

    private List<StatementNode> parseBlockStatements() {
        expect(Symbol.TokenType.LBRACE, "Expected '{' to start block");

        List<StatementNode> statements = new ArrayList<>();
        while (!check(Symbol.TokenType.RBRACE) && !isEOF()) {
            statements.add(parseStatement());
        }

        expect(Symbol.TokenType.RBRACE, "Expected '}' to close block");
        return statements;
    }

    private ExpressionNode parseExpression() {
        return parseOr();
    }

    private ExpressionNode parseOr() {
        ExpressionNode expr = parseAnd();

        while (check(Symbol.TokenType.OR)) {
            String op = consumeOperator();
            ExpressionNode right = parseAnd();
            expr = new OperationNode(op, expr, right);
        }

        return expr;
    }

    private ExpressionNode parseAnd() {
        ExpressionNode expr = parseEquality();

        while (check(Symbol.TokenType.AND)) {
            String op = consumeOperator();
            ExpressionNode right = parseEquality();
            expr = new OperationNode(op, expr, right);
        }

        return expr;
    }

    private ExpressionNode parseEquality() {
        ExpressionNode expr = parseComparison();

        while (check(Symbol.TokenType.EQ) || check(Symbol.TokenType.NEQ)) {
            String op = consumeOperator();
            ExpressionNode right = parseComparison();
            expr = new OperationNode(op, expr, right);
        }

        return expr;
    }

    private ExpressionNode parseComparison() {
        ExpressionNode expr = parseAdditive();

        while (check(Symbol.TokenType.LT)
                || check(Symbol.TokenType.LE)
                || check(Symbol.TokenType.GT)
                || check(Symbol.TokenType.GE)) {
            String op = consumeOperator();
            ExpressionNode right = parseAdditive();
            expr = new OperationNode(op, expr, right);
        }

        return expr;
    }

    private ExpressionNode parseAdditive() {
        ExpressionNode expr = parseMultiplicative();

        while (check(Symbol.TokenType.PLUS) || check(Symbol.TokenType.MINUS)) {
            String op = consumeOperator();
            ExpressionNode right = parseMultiplicative();
            expr = new OperationNode(op, expr, right);
        }

        return expr;
    }

    private ExpressionNode parseMultiplicative() {
        ExpressionNode expr = parseUnary();

        while (check(Symbol.TokenType.STAR)
                || check(Symbol.TokenType.SLASH)
                || check(Symbol.TokenType.MOD)) {
            String op = consumeOperator();
            ExpressionNode right = parseUnary();
            expr = new OperationNode(op, expr, right);
        }

        return expr;
    }

    private ExpressionNode parseUnary() {
        if (check(Symbol.TokenType.MINUS)) {
            String op = consumeOperator();
            ExpressionNode right = parseUnary();
            return new OperationNode(op, new IntegerNode(0), right);
        }

        if (isKeyword(current, Symbol.TokenType.KW_NOT, "not")) {
            String op = lexemeOf(current);
            advance();
            ExpressionNode right = parseUnary();
            return new OperationNode(op, new BooleanNode(false), right);
        }

        return parsePrimary();
    }

    private ExpressionNode parsePrimary() {
        if (match(Symbol.TokenType.LPAREN)) {
            ExpressionNode expr = parseExpression();
            expect(Symbol.TokenType.RPAREN, "Expected ')' after expression");
            return parsePostfix(expr);
        }

        if (isLiteral(current)) {
            Symbol literal = current;
            advance();
            return parsePostfix(buildLiteralNode(literal));
        }

        if (isTypeToken(current) && checkNext(Symbol.TokenType.KW_ARRAY)) {
            String elementType = parseType();
            expectKeyword(Symbol.TokenType.KW_ARRAY, "ARRAY", "Expected 'ARRAY' after type");
            expect(Symbol.TokenType.LBRACKET, "Expected '[' after ARRAY");
            ExpressionNode size = parseExpression();
            expect(Symbol.TokenType.RBRACKET, "Expected ']' after array size");
            return parsePostfix(new ArrayCreationNode(elementType, size));
        }

        if (isTypeToken(current) && checkNext(Symbol.TokenType.KW_ARRAY)) {
            String elementType = parseType();
            expectKeyword(Symbol.TokenType.KW_ARRAY, "ARRAY", "Expected 'ARRAY' after type");
            expect(Symbol.TokenType.LBRACKET, "Expected '[' after ARRAY");
            ExpressionNode size = parseExpression();
            expect(Symbol.TokenType.RBRACKET, "Expected ']' after array size");
            return new ArrayCreationNode(elementType, size);
        }

        if (check(Symbol.TokenType.IDENTIFIER)) {
            String name = lexemeOf(current);
            advance();

            ExpressionNode expr;
            if (match(Symbol.TokenType.LPAREN)) {
                List<ExpressionNode> arguments = parseArguments();
                expect(Symbol.TokenType.RPAREN, "Expected ')' after arguments");
                expr = new FunctionCallNode(name, arguments);
            } else {
                expr = new IdentifierNode(name);
            }

            return parsePostfix(expr);
        }

        throw new ParseException("Expected primary expression, found: " + current);
    }

    private ExpressionNode parsePostfix(ExpressionNode expr) {
        while (true) {
            if (match(Symbol.TokenType.LBRACKET)) {
                ExpressionNode index = parseExpression();
                expect(Symbol.TokenType.RBRACKET, "Expected ']' after array index");
                expr = new ArrayAccessNode(expr, index);
                continue;
            }

            if (match(Symbol.TokenType.DOT)) {
                String fieldName = lexemeOf(current);
                expect(Symbol.TokenType.IDENTIFIER, "Expected field name after '.'");
                expr = new FieldAccessNode(expr, fieldName);
                continue;
            }

            break;
        }

        return expr;
    }

    private List<ExpressionNode> parseArguments() {
        List<ExpressionNode> arguments = new ArrayList<>();

        if (check(Symbol.TokenType.RPAREN)) {
            return arguments;
        }

        while (true) {
            arguments.add(parseExpression());
            if (!match(Symbol.TokenType.COMMA)) {
                break;
            }
        }

        return arguments;
    }

    private ExpressionNode buildLiteralNode(Symbol literal) {
        String lex = lexemeOf(literal);
        Symbol.TokenType type = literal.getType();

        if ("true".equals(lex) || "false".equals(lex)) {
            return new BooleanNode(Boolean.parseBoolean(lex));
        }

        if (type == Symbol.TokenType.INT) {
            return new IntegerNode(Integer.parseInt(lex));
        }

        if (type == Symbol.TokenType.FLOAT) {
            return new FloatNode(Float.parseFloat(lex));
        }

        if (type == Symbol.TokenType.STRING) {
            return new StringNode(stripQuotes(lex));
        }

        if (type == Symbol.TokenType.BOOL) {
            return new BooleanNode(Boolean.parseBoolean(lex));
        }

        throw new ParseException("Unsupported literal: " + literal);
    }

    private String stripQuotes(String s) {
        if (s == null) return null;
        if (s.length() >= 2 && s.startsWith("\"") && s.endsWith("\"")) {
            return s.substring(1, s.length() - 1);
        }
        return s;
    }
}
